@@ -2,6 +2,14 @@ update-manager (1:0.96.5) jaunty; urgency=low
 
   * UpdateManager/Core/MetaRelease.py:
     - remove debug message (LP: #310046)
+  * UpdateManager/Common/utils.py:
+    - when  initializing the proxy configuration, do in this
+      order:
+      * check apt setting
+      * check synaptic setting
+      * check users gconf
+      * check http_proxy environment 
+    (LP: #24250)
   
  --
 
